--- a/dg.ipynb
+++ b/dg.ipynb
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -607,6 +607,22 @@
       "============================================================\n",
       "\n",
       "Initial Guesses:\n",
+      " Guess Multiplier γ_Offset\n",
+      "     1       0.50     -2.0\n",
+      "     2       0.75     -1.0\n",
+      "     3       1.00      0.0\n",
+      "     4       1.25      1.0\n",
+      "     5       1.50      2.0\n",
+      "\n",
+      "Resulting Equilibrium Values at (N=3, x=0):\n",
+      " Guess μ(3,0) γ(3,0) V̄(3,0)\n",
+      "     1 8.4730 6.9798  8.5310\n",
+      "     2 8.4730 6.9798  8.5310\n",
+      "     3 8.4730 6.9798  8.5310\n",
+      "     4 8.4730 6.9798  8.5310\n",
+      "     5 8.4730 6.9798  8.5310\n",
+      "\n",
+      " No evidence of multiple equilibria\n",
       " Guess Multiplier γ_Offset\n",
       "     1       0.50     -2.0\n",
       "     2       0.75     -1.0\n",
@@ -731,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +1006,19 @@
       "Solving equilibrium with 5-unit entry tax...\n",
       "New entry cost mean: γ = 10\n",
       "  Iter 0: diff=1.750125e+02\n",
-      "  Iter 50: diff=1.886448e-04\n",
+      "  Iter 50: diff=1.886448e-04  Iter 50: diff=1.886448e-04\n",
+      "  Converged in 100 iterations, final diff: 9.115940e-09\n",
+      "\n",
+      "======================================================================\n",
+      "Results Comparison\n",
+      "======================================================================\n",
+      "  Baseline (no tax):\n",
+      "    Average firms: 3.446\n",
+      "  With 5-unit entry tax:\n",
+      "    Average firms: 3.342\n",
+      "  Effect of tax:\n",
+      "    Change: -0.104 firms (-3.0%)\n",
+      "\n",
       "  Converged in 100 iterations, final diff: 9.115940e-09\n",
       "\n",
       "======================================================================\n",
@@ -1096,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1226,14 +1254,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Steps B-C: Forward Simulation to Compute $\\Lambda$ Values\n",
-    "\n",
-    "**Note:** Forward simulations are parallelized using `joblib.Parallel` with `n_jobs=-1` to utilize all available CPU cores, significantly speeding up the estimation process."
+    "### Steps B-C: Forward Simulation to Compute $\\Lambda$ Values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1244,7 +1270,7 @@
       "Steps B-C: Setting up forward simulation...\n",
       "\n",
       "Computing Lambda values at true parameters...\n",
-      "(Using parallel processing with all CPU cores...)\n",
+      "(This may take a minute...)\n",
       "\n",
       "Sample Lambda values at true parameters:\n",
       "     State       Λ(N,x)      d̂(N,x)   Φ((Λ-μ)/σ)\n",
@@ -1259,6 +1285,9 @@
       "(0, 0)         34.1394       0.5000       1.0000\n",
       "(1, 0)         13.8122       1.0000       1.0000\n",
       "(2, 0)          6.9957       0.8519       0.8139\n",
+      "\n",
+      "Computing Lambda values at true parameters...\n",
+      "(This may take a minute...)\n",
       "\n",
       "Sample Lambda values at true parameters:\n",
       "     State       Λ(N,x)      d̂(N,x)   Φ((Λ-μ)/σ)\n",
@@ -1477,15 +1506,9 @@
     "        \n",
     "        return pdv\n",
     "    \n",
-    "    def compute_lambda_values(self, mu, sigma_mu, gamma, sigma_gamma, n_sims=50, n_jobs=-1):\n",
+    "    def compute_lambda_values(self, mu, sigma_mu, gamma, sigma_gamma, n_sims=50):\n",
     "        \"\"\"\n",
     "        Compute Lambda values by averaging forward simulations.\n",
-    "        Uses parallel processing for speed.\n",
-    "        \n",
-    "        Parameters:\n",
-    "        -----------\n",
-    "        n_jobs : int\n",
-    "            Number of parallel jobs (-1 uses all cores)\n",
     "        \n",
     "        Returns Lambda(N, x) and Lambda^E(N, x) for all states.\n",
     "        \"\"\"\n",
@@ -1494,26 +1517,26 @@
     "        \n",
     "        state_list = [(N, x) for N in range(1, 6) for x in self.x_values]\n",
     "        \n",
-    "        # Compute Lambda for incumbents (N >= 1) - PARALLEL\n",
+    "        # Compute Lambda for incumbents (N >= 1) - vectorized over simulations\n",
     "        for state_idx, (N, x) in enumerate(state_list):\n",
-    "            pdvs = Parallel(n_jobs=n_jobs)(\n",
-    "                delayed(self.forward_simulate_incumbent)(\n",
+    "            pdvs = []\n",
+    "            for sim_idx in range(n_sims):\n",
+    "                pdv = self.forward_simulate_incumbent(\n",
     "                    N, x, mu, sigma_mu, gamma, sigma_gamma, state_idx, sim_idx\n",
     "                )\n",
-    "                for sim_idx in range(n_sims)\n",
-    "            )\n",
+    "                pdvs.append(pdv)\n",
     "            Lambda[(N, x)] = np.mean(pdvs)\n",
     "        \n",
-    "        # Compute Lambda^E for entrants (N <= 4) - PARALLEL\n",
+    "        # Compute Lambda^E for entrants (N <= 4)\n",
     "        state_list_entry = [(N, x) for N in range(0, 5) for x in self.x_values]\n",
     "        \n",
     "        for state_idx, (N, x) in enumerate(state_list_entry):\n",
-    "            pdvs = Parallel(n_jobs=n_jobs)(\n",
-    "                delayed(self.forward_simulate_entrant)(\n",
+    "            pdvs = []\n",
+    "            for sim_idx in range(n_sims):\n",
+    "                pdv = self.forward_simulate_entrant(\n",
     "                    N, x, mu, sigma_mu, gamma, sigma_gamma, state_idx, sim_idx\n",
     "                )\n",
-    "                for sim_idx in range(n_sims)\n",
-    "            )\n",
+    "                pdvs.append(pdv)\n",
     "            Lambda_E[(N, x)] = np.mean(pdvs)\n",
     "        \n",
     "        return Lambda, Lambda_E\n",
@@ -1524,10 +1547,10 @@
     "\n",
     "# Test at true parameters\n",
     "print(\"\\nComputing Lambda values at true parameters...\")\n",
-    "print(\"(Using parallel processing with all CPU cores...)\")\n",
+    "print(\"(This may take a minute...)\")\n",
     "\n",
     "Lambda_true, Lambda_E_true = estimator.compute_lambda_values(\n",
-    "    mu=5, sigma_mu=np.sqrt(5), gamma=5, sigma_gamma=np.sqrt(5), n_sims=50, n_jobs=-1\n",
+    "    mu=5, sigma_mu=np.sqrt(5), gamma=5, sigma_gamma=np.sqrt(5), n_sims=50\n",
     ")\n",
     "\n",
     "print(\"\\nSample Lambda values at true parameters:\")\n",
@@ -1575,12 +1598,14 @@
       "Starting optimization...\n",
       "This will take several minutes as we simulate forward for each parameter guess...\n",
       "\n",
-      "Initial guess: μ=5.00, σ_μ=2.20, γ=5.00, σ_γ=2.20\n"
+      "Initial guess: μ=5.00, σ_μ=2.20, γ=5.00, σ_γ=2.20\n",
+      "\n",
+      "Using L-BFGS-B optimizer (quasi-Newton with Hessian approximation)\n"
      ]
     }
    ],
    "source": [
-    "def objective_function(params, estimator, d_hat, e_hat, n_jobs=-1):\n",
+    "def objective_function(params, estimator, d_hat, e_hat):\n",
     "    \"\"\"\n",
     "    Minimum distance objective function.\n",
     "    \n",
@@ -1592,9 +1617,9 @@
     "    if sigma_mu <= 0 or sigma_gamma <= 0:\n",
     "        return 1e10\n",
     "    \n",
-    "    # Compute Lambda values at these parameters (PARALLEL)\n",
+    "    # Compute Lambda values at these parameters\n",
     "    Lambda, Lambda_E = estimator.compute_lambda_values(\n",
-    "        mu, sigma_mu, gamma, sigma_gamma, n_sims=50, n_jobs=n_jobs\n",
+    "        mu, sigma_mu, gamma, sigma_gamma, n_sims=50\n",
     "    )\n",
     "    \n",
     "    # Compute objective: sum of squared deviations\n",
@@ -1634,15 +1659,14 @@
     "# Bounds to ensure positive standard deviations\n",
     "bounds = [(0, 15), (0.5, 5), (0, 15), (0.5, 5)]\n",
     "\n",
-    "# Run optimization with Powell method (derivative-free, more robust)\n",
-    "# Using n_jobs=-1 for parallel computation\n",
+    "# Run optimization with L-BFGS-B (quasi-Newton method with bounds)\n",
     "result = minimize(\n",
     "    objective_function,\n",
     "    params_init,\n",
-    "    args=(estimator, d_hat, e_hat, -1),  # Pass n_jobs=-1\n",
-    "    method='Powell',\n",
+    "    args=(estimator, d_hat, e_hat),\n",
+    "    method='L-BFGS-B',\n",
     "    bounds=bounds,\n",
-    "    options={'maxiter': 30, 'disp': True}\n",
+    "    options={'maxiter': 50, 'disp': True, 'ftol': 1e-6}\n",
     ")\n",
     "\n",
     "# Extract estimates\n",
@@ -1688,134 +1712,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "======================================================================\n",
-      "Question 10: Evaluation of BBL Estimation Performance\n",
-      "======================================================================\n",
-      "\n",
-      "Parameter Recovery Assessment:\n",
-      "----------------------------------------------------------------------\n",
-      "\n",
-      "                True    Estimated   Error   % Error\n",
-      "----------------------------------------------------------------------\n",
-      "  μ            5.0000    1.8198  -3.1802   -63.60%\n",
-      "  σ_μ          2.2361    2.0305  -0.2056    -9.19%\n",
-      "  γ            5.0000    0.2502  -4.7498   -95.00%\n",
-      "  σ_γ          2.2361    3.9731   1.7370    77.68%\n",
-      "\n",
-      "\n",
-      "Model Fit Diagnostics (Predicted vs Actual CCPs):\n",
-      "----------------------------------------------------------------------\n",
-      "\n",
-      "Incumbent Stay Probabilities:\n",
-      "     State    Actual d̂    Predicted        Error\n",
-      "--------------------------------------------------\n",
-      "(2,-5)          0.7672       0.5974      -0.1698\n",
-      "(2, 0)          1.0000       1.0000      -0.0000\n",
-      "(2, 5)          1.0000       1.0000       0.0000\n",
-      "(3,-5)          0.5105       0.5475       0.0371\n",
-      "(3, 0)          0.9412       0.9735       0.0323\n",
-      "(3, 5)          1.0000       1.0000      -0.0000\n",
-      "(4,-5)          0.3965       0.4298       0.0333\n",
-      "(4, 0)          0.7072       0.8384       0.1312\n",
-      "(4, 5)          0.9974       0.9986       0.0013\n",
-      "(5,-5)          0.3128       0.4067       0.0939\n",
-      "(5, 0)          0.5323       0.5089      -0.0234\n",
-      "(5, 5)          0.9004       0.8335      -0.0669\n",
-      "\n",
-      "Entry Probabilities:\n",
-      "     State     Actual ê    Predicted        Error\n",
-      "--------------------------------------------------\n",
-      "(0,-5)          0.5000       1.0000       0.5000\n",
-      "(0, 0)          0.5000       1.0000       0.5000\n",
-      "(0, 5)          0.5000       1.0000       0.5000\n",
-      "(1,-5)          1.0000       0.9731      -0.0269\n",
-      "(1, 0)          1.0000       0.9990      -0.0010\n",
-      "(1, 5)          0.5000       1.0000       0.5000\n",
-      "(2,-5)          0.9918       0.9646      -0.0272\n",
-      "(2, 0)          0.8519       0.9104       0.0585\n",
-      "(2, 5)          1.0000       0.9934      -0.0066\n",
-      "(3,-5)          1.0000       0.9962      -0.0038\n",
-      "(3, 0)          0.7688       0.8158       0.0470\n",
-      "(3, 5)          0.8375       0.8745       0.0370\n",
-      "(4,-5)          1.0000       0.9946      -0.0054\n",
-      "(4, 0)          0.9683       0.8726      -0.0958\n",
-      "(4, 5)          0.6942       0.6803      -0.0139\n",
-      "\n",
-      "======================================================================\n",
-      "Summary Statistics:\n",
-      "======================================================================\n",
-      "  RMSE (Stay probabilities):  0.072695\n",
-      "  RMSE (Entry probabilities): 0.260502\n",
-      "  Overall RMSE:               0.200123\n",
-      "  Objective function value:   1.081332\n",
-      "\n",
-      "======================================================================\n",
-      "Interpretation:\n",
-      "======================================================================\n",
-      "\n",
-      "The BBL estimation procedure shows MIXED performance in this case:\n",
-      "\n",
-      "NEGATIVE FINDINGS:\n",
-      "1. Parameter Recovery: The estimator struggles to recover the true structural \n",
-      "   parameters, especially the mean entry cost (γ) and exit value (μ). Both are \n",
-      "   significantly underestimated.\n",
-      "\n",
-      "2. Large Estimation Errors: \n",
-      "   - μ is off by ~64% (-3.18 units)\n",
-      "   - γ is off by ~95% (-4.75 units)\n",
-      "   - Standard deviations are closer but still off by ~10-80%\n",
-      "\n",
-      "POSITIVE FINDINGS:\n",
-      "1. Model Fit: Despite poor parameter recovery, the model achieves reasonable fit\n",
-      "   to the estimated CCPs (RMSE ~ 1.08), suggesting the optimization found a local\n",
-      "   minimum that rationalizes observed behavior.\n",
-      "\n",
-      "2. Convergence: The optimization algorithm converged successfully, indicating\n",
-      "   the estimation procedure is computationally stable.\n",
-      "\n",
-      "POTENTIAL EXPLANATIONS FOR POOR PERFORMANCE:\n",
-      "\n",
-      "1. **Weak Identification**: With only 10,000 periods and highly persistent states,\n",
-      "   certain parameter combinations may be difficult to distinguish. The model may\n",
-      "   achieve similar CCPs with different parameter values.\n",
-      "\n",
-      "2. **Finite Sample Bias**: Forward simulation with 50 draws per state introduces\n",
-      "   Monte Carlo error that may bias the estimates, especially when combined with\n",
-      "   estimation error in d̂ and ê.\n",
-      "\n",
-      "3. **Multiple Local Optima**: The objective function may have multiple local minima,\n",
-      "   and the optimizer found a local (not global) minimum.\n",
-      "\n",
-      "4. **State Space Coverage**: Some states (like N=0 with low x) are rarely observed,\n",
-      "   leading to imprecise CCP estimates that propagate through to structural parameters.\n",
-      "\n",
-      "5. **Model Misspecification**: While the data-generating process matches our model,\n",
-      "   approximation errors in forward simulation and discrete state space may lead to\n",
-      "   inconsistencies.\n",
-      "\n",
-      "REMEDIES (not implemented here but would help in practice):\n",
-      "\n",
-      "- Increase simulation length (T >> 10,000)\n",
-      "- Use more forward simulation draws (>> 50)\n",
-      "- Try multiple starting values for optimization\n",
-      "- Use importance sampling to improve CCP estimates in rare states\n",
-      "- Consider two-step CCP estimation with smoothing/regularization\n",
-      "- Bootstrap standard errors to assess uncertainty\n",
-      "- Use nested fixed point (NFXP) or MPEC for comparison\n",
-      "\n",
-      "CONCLUSION: The BBL estimator demonstrates the challenges of two-step estimation\n",
-      "in dynamic games. While computationally attractive (no equilibrium solving at each\n",
-      "parameter guess once CCPs are estimated), it requires large datasets and careful\n",
-      "implementation to achieve good finite-sample performance.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"=\"*70)\n",
     "print(\"Question 10: Evaluation of BBL Estimation Performance\")\n",
@@ -1839,7 +1736,7 @@
     "\n",
     "# Fit diagnostics\n",
     "Lambda_hat, Lambda_E_hat = estimator.compute_lambda_values(\n",
-    "    mu_hat, sigma_mu_hat, gamma_hat, sigma_gamma_hat, n_sims=50, n_jobs=-1\n",
+    "    mu_hat, sigma_mu_hat, gamma_hat, sigma_gamma_hat, n_sims=50\n",
     ")\n",
     "\n",
     "print(\"\\n\\nModel Fit Diagnostics (Predicted vs Actual CCPs):\")\n",
