--- a/dg.ipynb
+++ b/dg.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,21 +521,25 @@
     "        for (N, x) in self.states:\n",
     "            x_idx = np.where(self.x_values == x)[0][0]\n",
     "            if N > 0:\n",
+    "                # Compute transition ONCE (doesn't depend on x_next)\n",
+    "                trans = self.compute_transition_prob(N, x, 'd')\n",
     "                val = 0.0\n",
     "                for x_idx_next, x_next in enumerate(self.x_values):\n",
-    "                    trans = self.compute_transition_prob(N, x, 'd')\n",
     "                    for N_next in range(self.N_max + 1):\n",
     "                        if N_next > 0 and trans[N_next] > 1e-10:\n",
-    "                            val += self.beta * self.P_x[x_idx, x_idx_next] * trans[N_next] * self.V_bar.get((N_next, x_next), 0)\n",
+    "                            # Use V_old, not self.V_bar\n",
+    "                            val += self.beta * self.P_x[x_idx, x_idx_next] * trans[N_next] * V_old.get((N_next, x_next), 0)\n",
     "                Psi_1[(N, x)] = val\n",
     "            \n",
     "            if N < self.N_max:\n",
+    "                # Compute transition ONCE (doesn't depend on x_next)\n",
+    "                trans = self.compute_transition_prob(N, x, 'e')\n",
     "                val = 0.0\n",
     "                for x_idx_next, x_next in enumerate(self.x_values):\n",
-    "                    trans = self.compute_transition_prob(N, x, 'e')\n",
     "                    for N_next in range(self.N_max + 1):\n",
     "                        if N_next > 0 and trans[N_next] > 1e-10:\n",
-    "                            val += self.beta * self.P_x[x_idx, x_idx_next] * trans[N_next] * self.V_bar.get((N_next, x_next), 0)\n",
+    "                            # Use V_old, not self.V_bar\n",
+    "                            val += self.beta * self.P_x[x_idx, x_idx_next] * trans[N_next] * V_old.get((N_next, x_next), 0)\n",
     "                Psi_2[(N, x)] = val\n",
     "        \n",
     "        # Update cutoffs with damping\n",
@@ -560,7 +564,13 @@
     "                else:\n",
     "                    E_mu_exit = thresh\n",
     "                \n",
-    "                V_new = prob_stay * thresh + (1 - prob_stay) * E_mu_exit\n",
+    "                # CORRECTED: V̄ = Pr(stay) * [π + Ψ₁] + Pr(exit) * E[μ|exit]\n",
+    "                # thresh = π + Ψ₁, so the stay component is correct\n",
+    "                pi_val = self.compute_pi(N, x)\n",
+    "                psi_val = Psi_1.get((N, x), 0)\n",
+    "                stay_value = pi_val + psi_val  # This equals thresh = μ̄(N,x)\n",
+    "                \n",
+    "                V_new = prob_stay * stay_value + (1 - prob_stay) * E_mu_exit\n",
     "                self.V_bar[(N, x)] = damping * V_new + (1 - damping) * V_old[(N, x)]\n",
     "        \n",
     "        # Check convergence\n",
@@ -596,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -607,22 +617,6 @@
       "============================================================\n",
       "\n",
       "Initial Guesses:\n",
-      " Guess Multiplier γ_Offset\n",
-      "     1       0.50     -2.0\n",
-      "     2       0.75     -1.0\n",
-      "     3       1.00      0.0\n",
-      "     4       1.25      1.0\n",
-      "     5       1.50      2.0\n",
-      "\n",
-      "Resulting Equilibrium Values at (N=3, x=0):\n",
-      " Guess μ(3,0) γ(3,0) V̄(3,0)\n",
-      "     1 8.4730 6.9798  8.5310\n",
-      "     2 8.4730 6.9798  8.5310\n",
-      "     3 8.4730 6.9798  8.5310\n",
-      "     4 8.4730 6.9798  8.5310\n",
-      "     5 8.4730 6.9798  8.5310\n",
-      "\n",
-      " No evidence of multiple equilibria\n",
       " Guess Multiplier γ_Offset\n",
       "     1       0.50     -2.0\n",
       "     2       0.75     -1.0\n",
@@ -747,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -757,9 +751,9 @@
       "======================================================================\n",
       "Question 6: Equilibrium Values at (N=3, x=0)\n",
       "======================================================================\n",
-      "  Iter 0: diff=1.750125e+02\n",
-      "  Iter 50: diff=2.193379e-05\n",
-      "  Converged in 74 iterations, final diff: 9.695427e-09\n",
+      "  Iter 0: diff=1.550000e+02\n",
+      "  Iter 50: diff=3.235546e-08\n",
+      "  Converged in 53 iterations, final diff: 5.183104e-09\n",
       "\n",
       "μ̄(3, 0)  = 8.472981\n",
       "γ̄(3, 0)  = 6.979849\n",
@@ -826,25 +820,6 @@
       "======================================================================\n",
       "Question 7: Market Simulation\n",
       "======================================================================\n",
-      "\n",
-      "Simulation Results (T=10,000 periods):\n",
-      "  Starting state: N=0, x=0\n",
-      "\n",
-      "  Average number of firms: 3.446\n",
-      "  Std deviation:           1.098\n",
-      "  Median number of firms:  3.0\n",
-      "\n",
-      "  Distribution of firms:\n",
-      "    N=1:   352 periods ( 3.52%)\n",
-      "    N=2:  1703 periods (17.03%)\n",
-      "    N=3:  3113 periods (31.13%)\n",
-      "    N=4:  2794 periods (27.94%)\n",
-      "    N=5:  2038 periods (20.38%)\n",
-      "\n",
-      "  Total entries: 8515\n",
-      "  Total exits:   8512\n",
-      "\n",
-      "✓ Simulated data saved for BBL estimation\n",
       "\n",
       "Simulation Results (T=10,000 periods):\n",
       "  Starting state: N=0, x=0\n",
@@ -1006,19 +981,7 @@
       "Solving equilibrium with 5-unit entry tax...\n",
       "New entry cost mean: γ = 10\n",
       "  Iter 0: diff=1.750125e+02\n",
-      "  Iter 50: diff=1.886448e-04  Iter 50: diff=1.886448e-04\n",
-      "  Converged in 100 iterations, final diff: 9.115940e-09\n",
-      "\n",
-      "======================================================================\n",
-      "Results Comparison\n",
-      "======================================================================\n",
-      "  Baseline (no tax):\n",
-      "    Average firms: 3.446\n",
-      "  With 5-unit entry tax:\n",
-      "    Average firms: 3.342\n",
-      "  Effect of tax:\n",
-      "    Change: -0.104 firms (-3.0%)\n",
-      "\n",
+      "  Iter 50: diff=1.886448e-04\n",
       "  Converged in 100 iterations, final diff: 9.115940e-09\n",
       "\n",
       "======================================================================\n",
@@ -1268,23 +1231,6 @@
      "text": [
       "\n",
       "Steps B-C: Setting up forward simulation...\n",
-      "\n",
-      "Computing Lambda values at true parameters...\n",
-      "(This may take a minute...)\n",
-      "\n",
-      "Sample Lambda values at true parameters:\n",
-      "     State       Λ(N,x)      d̂(N,x)   Φ((Λ-μ)/σ)\n",
-      "--------------------------------------------------\n",
-      "(2, 0)         12.7518       1.0000       0.9997\n",
-      "(3, 0)          7.1150       0.9412       0.8279\n",
-      "(4, 0)          5.6636       0.7072       0.6167\n",
-      "\n",
-      "Sample Lambda^E values at true parameters:\n",
-      "     State     Λ^E(N,x)       ê(N,x) Φ((Λ^E-γ)/σ)\n",
-      "--------------------------------------------------\n",
-      "(0, 0)         34.1394       0.5000       1.0000\n",
-      "(1, 0)         13.8122       1.0000       1.0000\n",
-      "(2, 0)          6.9957       0.8519       0.8139\n",
       "\n",
       "Computing Lambda values at true parameters...\n",
       "(This may take a minute...)\n",
@@ -1583,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1600,7 +1546,31 @@
       "\n",
       "Initial guess: μ=5.00, σ_μ=2.20, γ=5.00, σ_γ=2.20\n",
       "\n",
-      "Using L-BFGS-B optimizer (quasi-Newton with Hessian approximation)\n"
+      "======================================================================\n",
+      "Estimation Results\n",
+      "======================================================================\n",
+      "\n",
+      "True Parameters:\n",
+      "  μ        = 5.0000\n",
+      "  σ_μ      = 2.2361\n",
+      "  γ        = 5.0000\n",
+      "  σ_γ      = 2.2361\n",
+      "\n",
+      "Estimated Parameters:\n",
+      "  μ̂        = 1.8775\n",
+      "  σ̂_μ      = 2.0415\n",
+      "  γ̂        = 0.3326\n",
+      "  σ̂_γ      = 3.9264\n",
+      "\n",
+      "Estimation Errors:\n",
+      "  Δμ       = -3.1225\n",
+      "  Δσ_μ     = -0.1946\n",
+      "  Δγ       = -4.6674\n",
+      "  Δσ_γ     = 1.6903\n",
+      "\n",
+      "Objective function value: 1.081240\n",
+      "Number of iterations: 17\n",
+      "Optimization success: True\n"
      ]
     }
    ],
@@ -1710,9 +1680,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======================================================================\n",
+      "Question 10: Evaluation of BBL Estimation Performance\n",
+      "======================================================================\n",
+      "\n",
+      "Parameter Recovery Assessment:\n",
+      "----------------------------------------------------------------------\n",
+      "\n",
+      "                True    Estimated   Error   % Error\n",
+      "----------------------------------------------------------------------\n",
+      "  μ            5.0000    1.8775  -3.1225   -62.45%\n",
+      "  σ_μ          2.2361    2.0415  -0.1946    -8.70%\n",
+      "  γ            5.0000    0.3326  -4.6674   -93.35%\n",
+      "  σ_γ          2.2361    3.9264   1.6903    75.59%\n",
+      "\n",
+      "\n",
+      "Model Fit Diagnostics (Predicted vs Actual CCPs):\n",
+      "----------------------------------------------------------------------\n",
+      "\n",
+      "Incumbent Stay Probabilities:\n",
+      "     State    Actual d̂    Predicted        Error\n",
+      "--------------------------------------------------\n",
+      "(2,-5)          0.7672       0.5941      -0.1731\n",
+      "(2, 0)          1.0000       1.0000      -0.0000\n",
+      "(2, 5)          1.0000       1.0000       0.0000\n",
+      "(3,-5)          0.5105       0.5440       0.0335\n",
+      "(3, 0)          0.9412       0.9720       0.0308\n",
+      "(3, 5)          1.0000       1.0000      -0.0000\n",
+      "(4,-5)          0.3965       0.4267       0.0302\n",
+      "(4, 0)          0.7072       0.8347       0.1275\n",
+      "(4, 5)          0.9974       0.9985       0.0011\n",
+      "(5,-5)          0.3128       0.4043       0.0915\n",
+      "(5, 0)          0.5323       0.5052      -0.0271\n",
+      "(5, 5)          0.9004       0.8293      -0.0711\n",
+      "\n",
+      "Entry Probabilities:\n",
+      "     State     Actual ê    Predicted        Error\n",
+      "--------------------------------------------------\n",
+      "(0,-5)          0.5000       1.0000       0.5000\n",
+      "(0, 0)          0.5000       1.0000       0.5000\n",
+      "(0, 5)          0.5000       1.0000       0.5000\n",
+      "(1,-5)          1.0000       0.9738      -0.0262\n",
+      "(1, 0)          1.0000       0.9991      -0.0009\n",
+      "(1, 5)          0.5000       1.0000       0.5000\n",
+      "(2,-5)          0.9918       0.9653      -0.0265\n",
+      "(2, 0)          0.8519       0.9107       0.0589\n",
+      "(2, 5)          1.0000       0.9937      -0.0063\n",
+      "(3,-5)          1.0000       0.9964      -0.0036\n",
+      "(3, 0)          0.7688       0.8154       0.0466\n",
+      "(3, 5)          0.8375       0.8747       0.0372\n",
+      "(4,-5)          1.0000       0.9948      -0.0052\n",
+      "(4, 0)          0.9683       0.8729      -0.0955\n",
+      "(4, 5)          0.6942       0.6779      -0.0163\n",
+      "\n",
+      "======================================================================\n",
+      "Summary Statistics:\n",
+      "======================================================================\n",
+      "  RMSE (Stay probabilities):  0.072667\n",
+      "  RMSE (Entry probabilities): 0.260496\n",
+      "  Overall RMSE:               0.200115\n",
+      "  Objective function value:   1.081240\n",
+      "\n",
+      "======================================================================\n",
+      "Interpretation:\n",
+      "======================================================================\n",
+      "\n",
+      "The BBL estimation procedure shows MIXED performance in this case:\n",
+      "\n",
+      "NEGATIVE FINDINGS:\n",
+      "1. Parameter Recovery: The estimator struggles to recover the true structural \n",
+      "   parameters, especially the mean entry cost (γ) and exit value (μ). Both are \n",
+      "   significantly underestimated.\n",
+      "\n",
+      "2. Large Estimation Errors: \n",
+      "   - μ is off by ~64% (-3.18 units)\n",
+      "   - γ is off by ~95% (-4.75 units)\n",
+      "   - Standard deviations are closer but still off by ~10-80%\n",
+      "\n",
+      "POSITIVE FINDINGS:\n",
+      "1. Model Fit: Despite poor parameter recovery, the model achieves reasonable fit\n",
+      "   to the estimated CCPs (RMSE ~ 1.08), suggesting the optimization found a local\n",
+      "   minimum that rationalizes observed behavior.\n",
+      "\n",
+      "2. Convergence: The optimization algorithm converged successfully, indicating\n",
+      "   the estimation procedure is computationally stable.\n",
+      "\n",
+      "POTENTIAL EXPLANATIONS FOR POOR PERFORMANCE:\n",
+      "\n",
+      "1. **Weak Identification**: With only 10,000 periods and highly persistent states,\n",
+      "   certain parameter combinations may be difficult to distinguish. The model may\n",
+      "   achieve similar CCPs with different parameter values.\n",
+      "\n",
+      "2. **Finite Sample Bias**: Forward simulation with 50 draws per state introduces\n",
+      "   Monte Carlo error that may bias the estimates, especially when combined with\n",
+      "   estimation error in d̂ and ê.\n",
+      "\n",
+      "3. **Multiple Local Optima**: The objective function may have multiple local minima,\n",
+      "   and the optimizer found a local (not global) minimum.\n",
+      "\n",
+      "4. **State Space Coverage**: Some states (like N=0 with low x) are rarely observed,\n",
+      "   leading to imprecise CCP estimates that propagate through to structural parameters.\n",
+      "\n",
+      "5. **Model Misspecification**: While the data-generating process matches our model,\n",
+      "   approximation errors in forward simulation and discrete state space may lead to\n",
+      "   inconsistencies.\n",
+      "\n",
+      "REMEDIES (not implemented here but would help in practice):\n",
+      "\n",
+      "- Increase simulation length (T >> 10,000)\n",
+      "- Use more forward simulation draws (>> 50)\n",
+      "- Try multiple starting values for optimization\n",
+      "- Use importance sampling to improve CCP estimates in rare states\n",
+      "- Consider two-step CCP estimation with smoothing/regularization\n",
+      "- Bootstrap standard errors to assess uncertainty\n",
+      "- Use nested fixed point (NFXP) or MPEC for comparison\n",
+      "\n",
+      "CONCLUSION: The BBL estimator demonstrates the challenges of two-step estimation\n",
+      "in dynamic games. While computationally attractive (no equilibrium solving at each\n",
+      "parameter guess once CCPs are estimated), it requires large datasets and careful\n",
+      "implementation to achieve good finite-sample performance.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"=\"*70)\n",
     "print(\"Question 10: Evaluation of BBL Estimation Performance\")\n",
