--- a/dg.ipynb
+++ b/dg.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,13 +564,8 @@
     "                else:\n",
     "                    E_mu_exit = thresh\n",
     "                \n",
-    "                # CORRECTED: V̄ = Pr(stay) * [π + Ψ₁] + Pr(exit) * E[μ|exit]\n",
-    "                # thresh = π + Ψ₁, so the stay component is correct\n",
-    "                pi_val = self.compute_pi(N, x)\n",
-    "                psi_val = Psi_1.get((N, x), 0)\n",
-    "                stay_value = pi_val + psi_val  # This equals thresh = μ̄(N,x)\n",
-    "                \n",
-    "                V_new = prob_stay * stay_value + (1 - prob_stay) * E_mu_exit\n",
+    "                thresh = self.mu_cutoff[(N, x)]  # Already equals π + Ψ₁\n",
+    "                V_new = prob_stay * thresh + (1 - prob_stay) * E_mu_exit\n",
     "                self.V_bar[(N, x)] = damping * V_new + (1 - damping) * V_old[(N, x)]\n",
     "        \n",
     "        # Check convergence\n",
@@ -606,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -751,18 +746,18 @@
       "======================================================================\n",
       "Question 6: Equilibrium Values at (N=3, x=0)\n",
       "======================================================================\n",
-      "  Iter 0: diff=1.550000e+02\n",
-      "  Iter 50: diff=3.235546e-08\n",
-      "  Converged in 53 iterations, final diff: 5.183104e-09\n",
+      "  Iter 0: diff=1.750125e+02\n",
+      "  Iter 50: diff=2.193379e-05\n",
+      "  Converged in 74 iterations, final diff: 9.695427e-09\n",
       "\n",
       "μ̄(3, 0)  = 8.472981\n",
       "γ̄(3, 0)  = 6.979849\n",
       "V̄(3, 0)  = 8.530970\n",
       "\n",
       "V(3, 0, -2):\n",
-      "  Given μ_it = -2.0 and μ̄(3, 0) = 8.4730\n",
+      "  Given μ_it = -2.0 and μ̄(3, 0) = 8.472981\n",
       "  μ_it ≤ μ̄(3,0), firm STAYS\n",
-      "  V(3, 0, -2) = 8.472981 (continuation value)\n"
+      "  V(3, 0, -2) = 8.472981 (current profit + discounted continuation)\n"
      ]
     }
    ],
@@ -789,14 +784,14 @@
     "# For V(3, 0, -2): Value for specific μ_it = -2\n",
     "mu_specific = -2.0\n",
     "print(f\"\\nV(3, 0, -2):\")\n",
-    "print(f\"  Given μ_it = {mu_specific:.1f} and μ̄(3, 0) = {mu_bar_30:.4f}\")\n",
+    "print(f\"  Given μ_it = {mu_specific:.1f} and μ̄(3, 0) = {mu_bar_30:.6f}\")\n",
     "\n",
     "if mu_specific > mu_bar_30:\n",
     "    print(f\"  μ_it > μ̄(3,0), firm EXITS\")\n",
     "    print(f\"  V(3, 0, -2) = {mu_specific:.6f} (immediate exit payoff)\")\n",
     "else:\n",
     "    print(f\"  μ_it ≤ μ̄(3,0), firm STAYS\")\n",
-    "    print(f\"  V(3, 0, -2) = {mu_bar_30:.6f} (continuation value)\")"
+    "    print(f\"  V(3, 0, -2) = {mu_bar_30:.6f} (current profit + discounted continuation)\")"
    ]
   },
   {
@@ -810,38 +805,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "======================================================================\n",
-      "Question 7: Market Simulation\n",
-      "======================================================================\n",
-      "\n",
-      "Simulation Results (T=10,000 periods):\n",
-      "  Starting state: N=0, x=0\n",
-      "\n",
-      "  Average number of firms: 3.446\n",
-      "  Std deviation:           1.098\n",
-      "  Median number of firms:  3.0\n",
-      "\n",
-      "  Distribution of firms:\n",
-      "    N=1:   352 periods ( 3.52%)\n",
-      "    N=2:  1703 periods (17.03%)\n",
-      "    N=3:  3113 periods (31.13%)\n",
-      "    N=4:  2794 periods (27.94%)\n",
-      "    N=5:  2038 periods (20.38%)\n",
-      "\n",
-      "  Total entries: 8515\n",
-      "  Total exits:   8512\n",
-      "\n",
-      "✓ Simulated data saved for BBL estimation\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def simulate_market(self, N_init=0, x_init=0, T=10000, seed=None):\n",
     "    \"\"\"\n",
@@ -967,35 +933,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "======================================================================\n",
-      "Question 8: Entry Tax Counterfactual\n",
-      "======================================================================\n",
-      "\n",
-      "Solving equilibrium with 5-unit entry tax...\n",
-      "New entry cost mean: γ = 10\n",
-      "  Iter 0: diff=1.750125e+02\n",
-      "  Iter 50: diff=1.886448e-04\n",
-      "  Converged in 100 iterations, final diff: 9.115940e-09\n",
-      "\n",
-      "======================================================================\n",
-      "Results Comparison\n",
-      "======================================================================\n",
-      "  Baseline (no tax):\n",
-      "    Average firms: 3.446\n",
-      "  With 5-unit entry tax:\n",
-      "    Average firms: 3.342\n",
-      "  Effect of tax:\n",
-      "    Change: -0.104 firms (-3.0%)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"=\"*70)\n",
     "print(\"Question 8: Entry Tax Counterfactual\")\n",
@@ -1087,59 +1027,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "======================================================================\n",
-      "Question 9: BBL Estimation\n",
-      "======================================================================\n",
-      "\n",
-      "Step A: Estimating CCPs from data...\n",
-      "\n",
-      "Estimated Stay Probabilities d̂(N, x):\n",
-      "  N    x    d̂(N,x)\n",
-      "--------------------\n",
-      "  1   -5     1.0000\n",
-      "  1    0     1.0000\n",
-      "  1    5     1.0000\n",
-      "  2   -5     0.7672\n",
-      "  2    0     1.0000\n",
-      "  2    5     1.0000\n",
-      "  3   -5     0.5105\n",
-      "  3    0     0.9412\n",
-      "  3    5     1.0000\n",
-      "  4   -5     0.3965\n",
-      "  4    0     0.7072\n",
-      "  4    5     0.9974\n",
-      "  5   -5     0.3128\n",
-      "  5    0     0.5323\n",
-      "  5    5     0.9004\n",
-      "\n",
-      "Estimated Entry Probabilities ê(N, x):\n",
-      "  N    x     ê(N,x)\n",
-      "--------------------\n",
-      "  0   -5     0.5000\n",
-      "  0    0     0.5000\n",
-      "  0    5     0.5000\n",
-      "  1   -5     1.0000\n",
-      "  1    0     1.0000\n",
-      "  1    5     0.5000\n",
-      "  2   -5     0.9918\n",
-      "  2    0     0.8519\n",
-      "  2    5     1.0000\n",
-      "  3   -5     1.0000\n",
-      "  3    0     0.7688\n",
-      "  3    5     0.8375\n",
-      "  4   -5     1.0000\n",
-      "  4    0     0.9683\n",
-      "  4    5     0.6942\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def estimate_ccps(df_sim):\n",
     "    \"\"\"\n",
@@ -1222,35 +1112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Steps B-C: Setting up forward simulation...\n",
-      "\n",
-      "Computing Lambda values at true parameters...\n",
-      "(This may take a minute...)\n",
-      "\n",
-      "Sample Lambda values at true parameters:\n",
-      "     State       Λ(N,x)      d̂(N,x)   Φ((Λ-μ)/σ)\n",
-      "--------------------------------------------------\n",
-      "(2, 0)         12.7518       1.0000       0.9997\n",
-      "(3, 0)          7.1150       0.9412       0.8279\n",
-      "(4, 0)          5.6636       0.7072       0.6167\n",
-      "\n",
-      "Sample Lambda^E values at true parameters:\n",
-      "     State     Λ^E(N,x)       ê(N,x) Φ((Λ^E-γ)/σ)\n",
-      "--------------------------------------------------\n",
-      "(0, 0)         34.1394       0.5000       1.0000\n",
-      "(1, 0)         13.8122       1.0000       1.0000\n",
-      "(2, 0)          6.9957       0.8519       0.8139\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class BBLEstimator:\n",
     "    \"\"\"BBL estimation for dynamic entry/exit game.\"\"\"\n",
@@ -1529,51 +1393,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "======================================================================\n",
-      "Step F: Minimum Distance Estimation\n",
-      "======================================================================\n",
-      "\n",
-      "Starting optimization...\n",
-      "This will take several minutes as we simulate forward for each parameter guess...\n",
-      "\n",
-      "Initial guess: μ=5.00, σ_μ=2.20, γ=5.00, σ_γ=2.20\n",
-      "\n",
-      "======================================================================\n",
-      "Estimation Results\n",
-      "======================================================================\n",
-      "\n",
-      "True Parameters:\n",
-      "  μ        = 5.0000\n",
-      "  σ_μ      = 2.2361\n",
-      "  γ        = 5.0000\n",
-      "  σ_γ      = 2.2361\n",
-      "\n",
-      "Estimated Parameters:\n",
-      "  μ̂        = 1.8775\n",
-      "  σ̂_μ      = 2.0415\n",
-      "  γ̂        = 0.3326\n",
-      "  σ̂_γ      = 3.9264\n",
-      "\n",
-      "Estimation Errors:\n",
-      "  Δμ       = -3.1225\n",
-      "  Δσ_μ     = -0.1946\n",
-      "  Δγ       = -4.6674\n",
-      "  Δσ_γ     = 1.6903\n",
-      "\n",
-      "Objective function value: 1.081240\n",
-      "Number of iterations: 17\n",
-      "Optimization success: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def objective_function(params, estimator, d_hat, e_hat):\n",
     "    \"\"\"\n",
@@ -1680,136 +1502,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "======================================================================\n",
-      "Question 10: Evaluation of BBL Estimation Performance\n",
-      "======================================================================\n",
-      "\n",
-      "Parameter Recovery Assessment:\n",
-      "----------------------------------------------------------------------\n",
-      "\n",
-      "                True    Estimated   Error   % Error\n",
-      "----------------------------------------------------------------------\n",
-      "  μ            5.0000    1.8775  -3.1225   -62.45%\n",
-      "  σ_μ          2.2361    2.0415  -0.1946    -8.70%\n",
-      "  γ            5.0000    0.3326  -4.6674   -93.35%\n",
-      "  σ_γ          2.2361    3.9264   1.6903    75.59%\n",
-      "\n",
-      "\n",
-      "Model Fit Diagnostics (Predicted vs Actual CCPs):\n",
-      "----------------------------------------------------------------------\n",
-      "\n",
-      "Incumbent Stay Probabilities:\n",
-      "     State    Actual d̂    Predicted        Error\n",
-      "--------------------------------------------------\n",
-      "(2,-5)          0.7672       0.5941      -0.1731\n",
-      "(2, 0)          1.0000       1.0000      -0.0000\n",
-      "(2, 5)          1.0000       1.0000       0.0000\n",
-      "(3,-5)          0.5105       0.5440       0.0335\n",
-      "(3, 0)          0.9412       0.9720       0.0308\n",
-      "(3, 5)          1.0000       1.0000      -0.0000\n",
-      "(4,-5)          0.3965       0.4267       0.0302\n",
-      "(4, 0)          0.7072       0.8347       0.1275\n",
-      "(4, 5)          0.9974       0.9985       0.0011\n",
-      "(5,-5)          0.3128       0.4043       0.0915\n",
-      "(5, 0)          0.5323       0.5052      -0.0271\n",
-      "(5, 5)          0.9004       0.8293      -0.0711\n",
-      "\n",
-      "Entry Probabilities:\n",
-      "     State     Actual ê    Predicted        Error\n",
-      "--------------------------------------------------\n",
-      "(0,-5)          0.5000       1.0000       0.5000\n",
-      "(0, 0)          0.5000       1.0000       0.5000\n",
-      "(0, 5)          0.5000       1.0000       0.5000\n",
-      "(1,-5)          1.0000       0.9738      -0.0262\n",
-      "(1, 0)          1.0000       0.9991      -0.0009\n",
-      "(1, 5)          0.5000       1.0000       0.5000\n",
-      "(2,-5)          0.9918       0.9653      -0.0265\n",
-      "(2, 0)          0.8519       0.9107       0.0589\n",
-      "(2, 5)          1.0000       0.9937      -0.0063\n",
-      "(3,-5)          1.0000       0.9964      -0.0036\n",
-      "(3, 0)          0.7688       0.8154       0.0466\n",
-      "(3, 5)          0.8375       0.8747       0.0372\n",
-      "(4,-5)          1.0000       0.9948      -0.0052\n",
-      "(4, 0)          0.9683       0.8729      -0.0955\n",
-      "(4, 5)          0.6942       0.6779      -0.0163\n",
-      "\n",
-      "======================================================================\n",
-      "Summary Statistics:\n",
-      "======================================================================\n",
-      "  RMSE (Stay probabilities):  0.072667\n",
-      "  RMSE (Entry probabilities): 0.260496\n",
-      "  Overall RMSE:               0.200115\n",
-      "  Objective function value:   1.081240\n",
-      "\n",
-      "======================================================================\n",
-      "Interpretation:\n",
-      "======================================================================\n",
-      "\n",
-      "The BBL estimation procedure shows MIXED performance in this case:\n",
-      "\n",
-      "NEGATIVE FINDINGS:\n",
-      "1. Parameter Recovery: The estimator struggles to recover the true structural \n",
-      "   parameters, especially the mean entry cost (γ) and exit value (μ). Both are \n",
-      "   significantly underestimated.\n",
-      "\n",
-      "2. Large Estimation Errors: \n",
-      "   - μ is off by ~64% (-3.18 units)\n",
-      "   - γ is off by ~95% (-4.75 units)\n",
-      "   - Standard deviations are closer but still off by ~10-80%\n",
-      "\n",
-      "POSITIVE FINDINGS:\n",
-      "1. Model Fit: Despite poor parameter recovery, the model achieves reasonable fit\n",
-      "   to the estimated CCPs (RMSE ~ 1.08), suggesting the optimization found a local\n",
-      "   minimum that rationalizes observed behavior.\n",
-      "\n",
-      "2. Convergence: The optimization algorithm converged successfully, indicating\n",
-      "   the estimation procedure is computationally stable.\n",
-      "\n",
-      "POTENTIAL EXPLANATIONS FOR POOR PERFORMANCE:\n",
-      "\n",
-      "1. **Weak Identification**: With only 10,000 periods and highly persistent states,\n",
-      "   certain parameter combinations may be difficult to distinguish. The model may\n",
-      "   achieve similar CCPs with different parameter values.\n",
-      "\n",
-      "2. **Finite Sample Bias**: Forward simulation with 50 draws per state introduces\n",
-      "   Monte Carlo error that may bias the estimates, especially when combined with\n",
-      "   estimation error in d̂ and ê.\n",
-      "\n",
-      "3. **Multiple Local Optima**: The objective function may have multiple local minima,\n",
-      "   and the optimizer found a local (not global) minimum.\n",
-      "\n",
-      "4. **State Space Coverage**: Some states (like N=0 with low x) are rarely observed,\n",
-      "   leading to imprecise CCP estimates that propagate through to structural parameters.\n",
-      "\n",
-      "5. **Model Misspecification**: While the data-generating process matches our model,\n",
-      "   approximation errors in forward simulation and discrete state space may lead to\n",
-      "   inconsistencies.\n",
-      "\n",
-      "REMEDIES (not implemented here but would help in practice):\n",
-      "\n",
-      "- Increase simulation length (T >> 10,000)\n",
-      "- Use more forward simulation draws (>> 50)\n",
-      "- Try multiple starting values for optimization\n",
-      "- Use importance sampling to improve CCP estimates in rare states\n",
-      "- Consider two-step CCP estimation with smoothing/regularization\n",
-      "- Bootstrap standard errors to assess uncertainty\n",
-      "- Use nested fixed point (NFXP) or MPEC for comparison\n",
-      "\n",
-      "CONCLUSION: The BBL estimator demonstrates the challenges of two-step estimation\n",
-      "in dynamic games. While computationally attractive (no equilibrium solving at each\n",
-      "parameter guess once CCPs are estimated), it requires large datasets and careful\n",
-      "implementation to achieve good finite-sample performance.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"=\"*70)\n",
     "print(\"Question 10: Evaluation of BBL Estimation Performance\")\n",
